--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <a href="" class="menu-link">Contacts</a></li>
        </ul>
     </nav>
-    <address class="address-item">
-        <ul class="address-item-link">
-            <li class="address-link-contact"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="address-link-contact"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="address">
+        <ul class="address-list">
+            <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </header>
