--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
         <!--Section 2-->
         <section class="page-team">
             <h2 class="section-title">Our Team</h2>
-            <ul class="page-team-list>
+            <ul class="page-team-list">
                 <li>
                     <img src="./images/mark.jpg" 
                     alt="mark.jpg"
                     width="264" 
-                    height="260"> 
-                    
+                    height="260">
                     <h3 class="section-title-name">Mark Guerrero</h3>
                     <p class="page-text">Product Designer</p>
+                        
                 </li>
                 <li>
                     <img src="./images/tom.jpg" 
