--- a/index.html
+++ b/index.html
@@ -119,47 +119,47 @@
             <h2 class="section-title">Our Portfolio</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-list-item">
-                    <img class="imgsize" src="./images/banking.jpg" 
+                    <img src="./images/banking.jpg" 
                     alt="banking.jpg" 
                     width="360px"
                     >
                 <h3 class="section-title-name">Banking App</h3>
                 <p class="page-text">App</p>
             </li>
-                <li class="portfolio-list-item>
-                    <img class="imgsize" src="./images/payment.jpg" 
+                <li class="portfolio-list-item">
+                    <img src="./images/payment.jpg" 
                     alt="payment.jpg" 
-                   width="360px"
+                    width="360px"
                     >
                 <h3 class="section-title-name">Cashless Payment</h3>
                 <p class="page-text">Marketing</p>
             </li>
-                <li class="portfolio-list-item>
-                    <img class="imgsize" src="./images/mediation.jpg" 
+                <li class="portfolio-list-item">
+                    <img src="./images/mediation.jpg" 
                     alt="mediation.jpg" 
                    width="360px"
                     >
                 <h3 class="section-title-name">Meditation App</h3>
                 <p class="page-text">App</p>
             </li>
-                <li class="portfolio-list-item>
-                    <img class="imgsize" src="./images/taxi.jpg" 
+                <li class="portfolio-list-item">
+                    <img src="./images/taxi.jpg" 
                     alt="taxi.jpg" 
                     width="360px"
                     >
                 <h3 class="section-title-name">Taxi Service</h3>
                 <p class="page-text">Marketing</p>
-            </li>
-                <li class="portfolio-list-item>
-                    <img class="imgsize" src="./images/screen.jpg" 
+            </li> 
+                <li class="portfolio-list-item">
+                    <img src="./images/screen.jpg" 
                     alt="screen.jpg" 
                    width="360px"
                     >
                 <h3 class="section-title-name">Screen Illustrations</h3>
                 <p class="page-text">Design</p>
             </li>
-                <li class="portfolio-list-item>
-                    <img class="imgsize" src="./images/courses.jpg" 
+                <li class="portfolio-list-item">
+                    <img src="./images/courses.jpg" 
                     alt="courses.jpg" 
                     width="360px"
                     >
