goit-markup-hw-02

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section class="page-team">
             <h2 class="section-title">Our Team</h2>
             <ul class="page-team-list">
-                <li>
+                <li class="team-list-item">
                     <img src="./images/mark.jpg" 
                     alt="mark.jpg"
                     width="264" 
@@ -88,7 +88,7 @@
                     <p class="page-text">Product Designer</p>
                         
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/tom.jpg" 
                     alt="tom.jpg" 
                     width="264" 
@@ -96,7 +96,7 @@
                     <h3 class="section-title-name">Tom Ford</h3>
                     <p class="page-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/camila.jpg" 
                     alt="camila.jpg" 
                     width="264" 
@@ -104,7 +104,7 @@
                     <h3 class="section-title-name">Camila Garcia</h3>
                     <p class="page-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/daniel.jpg" 
                     alt="daniel.jpg" 
                     width="264" 
