--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <nav class="page-nav">
        
          <a class="logo" href="./index.html">
-            Web<span class="logo-studio">
-            Studio</span></a>
+            Web<span class="logo-studio">Studio</span></a>
         <ul class="menu">
             <li class="menu-item">
                 <a href="./index.html" class="menu-link">Studio</a></li>
